# claude-project-config

./: .gitignore  AGENTS.md  CLAUDE.md  MEMORY.md  README.md  entrypoint.py  pyproject.toml
.claude/: CLAUDE.md  README.md  settings.json
.claude/agents/: code-analyzer.md  doc-writer.md  docs-researcher.md  implementer.md  planner.md  reviewer.md  web-researcher.md
.codex/: extensions
.codex/scripts/: post-edit-check.sh  session-stop.sh  task-complete.sh  teammate-idle.sh
.serena/: project.yml
design/pentest/: appendix-binary-linux.md  binary-linux.md  binary-windows.md  common.md  core.md  index.md  mobile.md  playbook-binary-linux.md  web.md
docs/: SKILL-SELECTION.md  TEAMMATE-HOOKS-GUIDE.md  USAGE.md
findings/heap_note/: driver.py  exploit.py  session-20260310.md
memory/: panel-declare-execute-gap.md  panel-tech-path-selection.md
runner/: __init__.py  credentials.py  detector.py  executor.py  main.py  models.py  reporter_json.py  reporter_pdf.py  requirements.txt
runner/templates/: report.html.j2
scripts/linux/: U-01.sh  U-02.sh  U-03.sh  U-04.sh  U-05.sh  U-06.sh  U-07.sh  U-08.sh  U-09.sh  U-10.sh  U-11.sh  U-12.sh  U-13.sh  U-14.sh  U-15.sh  U-16.sh  U-17.sh  U-18.sh  U-19.sh  U-20.sh  U-21.sh  U-22.sh  U-23.sh  U-24.sh  U-25.sh  U-26.sh  U-27.sh  U-28.sh  U-29.sh  U-30.sh  U-31.sh  U-32.sh  U-33.sh  U-34.sh  U-35.sh  U-36.sh  U-37.sh  U-38.sh  U-39.sh  U-40.sh  (+30 more)
scripts/windows/: PC-01.ps1  PC-02.ps1  PC-03.ps1  PC-04.ps1  PC-05.ps1  PC-06.ps1  PC-07.ps1  PC-08.ps1  PC-09.ps1  PC-10.ps1  PC-11.ps1  PC-12.ps1  PC-13.ps1  PC-14.ps1  PC-15.ps1  (+3 more)
(+122 files in other folders)
