[project]
name = "vuln-os"
version = "0.1.0"
description = "주요정보통신기반시설 OS 하드닝 자동화 점검 도구"
requires-python = ">=3.10"
dependencies = [
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runner"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
